# CE_5073-3

./: peticions.sh  pyproject.toml
ce_5073_3/: app.py  model.py  service.py
models/: knn.pck  lr.pck  svm.pck  tree.pck
