[tool.poetry]
name = "ce-5073-3-1"
version = "0.1.0"
description = ""
authors = ["samuelekumo <samuele@kumointernet.com>"]
readme = "README.md"
packages = [{include = "ce_5073_3"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
scikit-learn = "^1.3.2"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
